Bug 295558 - cursor is misplaced when replying
Summary: cursor is misplaced when replying
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 1.99.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-08 21:11 UTC by Anders Lund
Modified: 2012-03-09 12:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2012-03-08 21:11:58 UTC
User-Agent:       Mozilla/5.0 (X11; Linux i686) KHTML/4.8.1 (like Gecko) Konqueror/4.8
Build Identifier: 

When replying to a message, composer places the cursor directly after the quote, no matter the template.

I have one template with
%QUOTE
%CURSOR

and one
%CURSOR

%QUOTE

In both cases the cursor is placed at the end of the last line of the quote. For the second template, the empty lines are inserted at the top.

Reproducible: Always

Steps to Reproduce:
1. check your reply template for where the cursor should be, and make sure it should go on a new line, and that %QUOTE is used (just use the standard template)
2. reply to a message to start composer using the template
Actual Results:  
cursor is at the end of the last line of the quote

Expected Results:  
cursor should adhere the template, the standard is to put it on a blank line below the quote.
Comment 1 Laurent Montel 2012-03-09 08:10:04 UTC
I don't understand
which template doesn't work.
Please add an example not two!

So which example doesn't work ?
Comment 2 Anders Lund 2012-03-09 10:11:58 UTC
The cursor is misplaced with either of my templates, it is *always* placed at the end of the last line of the quote.

I get

<quoted text><cursor here>

no matter the template.
Comment 3 Laurent Montel 2012-03-09 10:18:27 UTC
Ok I confirm it
Comment 4 Laurent Montel 2012-03-09 11:26:00 UTC
Git commit 73fc2af37cac079b41c173797687103df499d73e by Montel Laurent.
Committed on 09/03/2012 at 12:25.
Pushed by mlaurent into branch 'master'.

Fix Bug 295558 - cursor is misplaced when replying

FIXED-IN: 4.8.2

M  +1    -1    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/73fc2af37cac079b41c173797687103df499d73e
Comment 5 Laurent Montel 2012-03-09 11:28:00 UTC
Git commit 722395bb9a3799f88a5cb65e0f11ed70e247679e by Montel Laurent.
Committed on 09/03/2012 at 12:25.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 295558 - cursor is misplaced when replying

FIXED-IN: 4.8.2
(cherry picked from commit 73fc2af37cac079b41c173797687103df499d73e)

Conflicts:

	templateparser/templateparser.cpp

M  +3    -1    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/722395bb9a3799f88a5cb65e0f11ed70e247679e
Comment 6 Anders Lund 2012-03-09 12:53:27 UTC
superfast fixing, supercool!