Fix Bug 295558 - cursor is misplaced when replying

FIXED-IN: 4.8.2
BUG: 295558
(cherry picked from commit 73fc2af37cac079b41c173797687103df499d73e)

Conflicts:

	templateparser/templateparser.cpp